# rocketapp

./: .gitignore  Cargo.toml  Rocket.toml
sql/: README  rocketapp.mysql.sql  rocketapp.sqlite.sql
src/: api.rs  auth.rs  database.rs  db_ops.rs  files.rs  main.rs  pages.rs
static/scripts/: global.js  index.js  user.js
static/styles/: global.css  index.css  login.css  navbar.css  post.css  style.css  user.css
templates/: 401.html.tera  404.html.tera  base.html.tera  create.html.tera  index.html.tera  login.html.tera  post.html.tera  profile.html.tera  register.html.tera  upload.html.tera  user.html.tera
templates/global/: base.html.tera  header.html.tera  macros.html.tera
