[package]
name = "rocketapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maud = "0.24.0"

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json"]

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_mysql"]

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["tera"]

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    # "fast-rng",          # Use a faster (but still sufficiently random) RNG
]